--- a/clients/customer-client/src/app/_layouts/login/login.component.html
+++ b/clients/customer-client/src/app/_layouts/login/login.component.html
@@ -41,7 +41,7 @@
       Login
     </button>
 
-    <button type="button" mat-raised-button class="guest-btn">
+    <button type="button" mat-raised-button class="guest-btn" (click)="onLoginAsGuest()">
       <mat-icon>person</mat-icon>
       Prijavi se bez profila
     </button>
