Can get in progress orders

--- a/clients/customer-client/src/app/_layouts/live-orders/live-orders.component.css
+++ b/clients/customer-client/src/app/_layouts/live-orders/live-orders.component.css
@@ -4,3 +4,9 @@
     align-items: center;
     padding: 0.5rem;
 }
+
+.orders-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
