Can accept order via http, and removing it on response, add to remove order via websocket also

--- a/clients/employee-client/src/app/_layouts/orders/orders.component.html
+++ b/clients/employee-client/src/app/_layouts/orders/orders.component.html
@@ -3,6 +3,7 @@
     <app-order-card
       [order]="order"
       (decline)="onDecline($event)"
+      (accept)="onAccept($event)"
     ></app-order-card>
   </ng-container>
 </div>
