Created a little bit of sidenav

--- a/clients/customer-client/src/app/_layouts/main-layout/main-layout.component.html
+++ b/clients/customer-client/src/app/_layouts/main-layout/main-layout.component.html
@@ -1,5 +1,7 @@
 <mat-drawer-container class="main-wrapper" [hasBackdrop]="true">
-  <mat-drawer #drawer [mode]="'over'">I'm a drawer</mat-drawer>
+  <mat-drawer #drawer [mode]="'over'" class="drawer">
+    <app-side-nav></app-side-nav>
+  </mat-drawer>
   <mat-drawer-content>
     <app-header (openSidenavEmitter)="drawer.toggle()"></app-header>
     <router-outlet></router-outlet>
