--- a/clients/customer-client/src/app/_layouts/login/login.component.html
+++ b/clients/customer-client/src/app/_layouts/login/login.component.html
@@ -32,6 +32,10 @@
       </button>
     </mat-form-field>
 
+    <div class="no-profile-wrapper">
+      Nemate profil?&nbsp;&nbsp;<a href="/register">Registruj se</a>
+    </div>
+
     <button
       mat-raised-button
       class="max-width"
