Can login and register as customer

--- a/clients/customer-client/src/app/_layouts/login/login.component.html
+++ b/clients/customer-client/src/app/_layouts/login/login.component.html
@@ -10,7 +10,7 @@
 
     <mat-form-field appearance="outline" class="max-width">
       <mat-label>Enter Username</mat-label>
-      <input matInput formControlName="username" />
+      <input matInput formControlName="username" autocomplete="username" />
     </mat-form-field>
 
     <mat-form-field appearance="outline" class="max-width">
@@ -18,7 +18,8 @@
       <input
         matInput
         [type]="hide ? 'password' : 'text'"
-        formControlName="password"
+        formControlName="password" 
+        autocomplete="current-password"
       />
       <button
         mat-icon-button
