--- a/clients/customer-client/src/app/_layouts/restaurants/restaurants.component.html
+++ b/clients/customer-client/src/app/_layouts/restaurants/restaurants.component.html
@@ -1,6 +1,8 @@
 <div class="main-wrapper">
     <div class="search-wrapper">
-        <app-search-bar></app-search-bar>
+        <app-search-bar [placeholder]="'search by name or city...'"
+            (search)="onSearch($event)"
+        ></app-search-bar>
     </div>
     <div class="restaurants-wrapper">
         <ng-container *ngFor="let restaurant of restaurants">
