Can search menu items by name

--- a/clients/customer-client/src/app/_layouts/make-order/menu-items/menu-items.component.html
+++ b/clients/customer-client/src/app/_layouts/make-order/menu-items/menu-items.component.html
@@ -1,6 +1,9 @@
 <div class="main-wrapper">
     <div class="search-wrapper">
-        <app-search-bar [placeholder]="'Search by name...'"></app-search-bar>
+        <app-search-bar 
+            [placeholder]="'Search by name...'"
+            (search)="onSearch($event)"
+        ></app-search-bar>
     </div>
     
     <div class="menu-items-wrapper">
