Can get menu by names

--- a/clients/customer-client/src/app/_layouts/make-order/menus/menus.component.html
+++ b/clients/customer-client/src/app/_layouts/make-order/menus/menus.component.html
@@ -1,6 +1,9 @@
 <div class="main-wrapper">
     <div class="search-bar-wrapper">
-        <app-search-bar [placeholder]="'Search by name...'"></app-search-bar>
+        <app-search-bar 
+            [placeholder]="'Search by name...'"
+            (search)="onSearch($event)"
+        ></app-search-bar>
     </div>
 
     <div class="menus-wrapper">
