Can add menu item to order from menu-details

--- a/clients/customer-client/src/app/_layouts/make-order/menus/menu-details/menu-details.component.html
+++ b/clients/customer-client/src/app/_layouts/make-order/menus/menu-details/menu-details.component.html
@@ -29,7 +29,10 @@
 
   <div class="menu-items-wrapper">
     <ng-container *ngFor="let menuItem of menu.menuItems">
-        <app-menu-item-row [menuItem]="menuItem"></app-menu-item-row>
+        <app-menu-item-row 
+          [menuItem]="menuItem"
+          (addToOrderEmitter)="addToOrder($event)"
+        ></app-menu-item-row>
     </ng-container>
   </div>
 </ng-container>
