Can search all orders by city or restaurant

--- a/clients/customer-client/src/app/_components/side-nav/side-nav.component.html
+++ b/clients/customer-client/src/app/_components/side-nav/side-nav.component.html
@@ -5,8 +5,15 @@
         </button>
     </div>
 
-    <div class="row" matRipple routerLink="/restaurants" routerLinkActive="row-active">
+    <div class="row" matRipple routerLink="/restaurants">
         <mat-icon inline>restaurant</mat-icon>
         <div class="text">Restaurants</div>
     </div>
+
+
+    <div class="row" matRipple routerLink="/orders">
+        <mat-icon inline>list_alt</mat-icon>
+        <div class="text">Orders</div>
+    </div>
+
 </div>
