--- a/clients/owner-client/src/app/_layouts/restaurants/restaurants.component.html
+++ b/clients/owner-client/src/app/_layouts/restaurants/restaurants.component.html
@@ -1,5 +1,5 @@
 <div class="main-wrapper">
   <ng-container *ngFor="let restaurant of restaurants">
-    <app-restaurant-card [restaurant]="restaurant"></app-restaurant-card>
+    <lib-restaurant-card [restaurant]="restaurant"></lib-restaurant-card>
   </ng-container>
 </div>
