Created order card

--- a/clients/customer-client/src/app/_layouts/live-orders/live-orders.component.html
+++ b/clients/customer-client/src/app/_layouts/live-orders/live-orders.component.html
@@ -9,7 +9,8 @@
     </div>
     <div class="orders-wrapper">
       <ng-container *ngFor="let order of restaurantOrders.orders">
-        <app-order-card [hasBtns]="false" [order]="order"></app-order-card>
+        <!-- <app-order-card [hasBtns]="false" [order]="order"></app-order-card> -->
+        <lib-order-card [order]="order" [hasBtns]="false"></lib-order-card>
       </ng-container>
     </div>
   </div>
