--- a/clients/customer-client/src/app/_layouts/orders/orders.component.html
+++ b/clients/customer-client/src/app/_layouts/orders/orders.component.html
@@ -22,7 +22,7 @@
 
   <div class="orders-wrapper">
     <ng-container *ngFor="let order of orders">
-      <app-order-card [order]="order" [hasBtns]="false"></app-order-card>
+      <lib-order-card [order]="order" [hasBtns]="false"></lib-order-card>
     </ng-container>
   </div>
 </div>
