--- a/clients/owner-client/src/app/_layouts/orders/orders-history/orders-history.component.html
+++ b/clients/owner-client/src/app/_layouts/orders/orders-history/orders-history.component.html
@@ -1,5 +1,5 @@
 <div class="orders-wrapper">
   <ng-container *ngFor="let order of orders">
-    <app-order-card [order]="order"></app-order-card>
+    <lib-order-card [order]="order"></lib-order-card>
   </ng-container>
 </div>
