--- a/clients/owner-client/src/app/_layouts/orders/orders.component.html
+++ b/clients/owner-client/src/app/_layouts/orders/orders.component.html
@@ -1,8 +1,9 @@
 <div class="orders-wrapper">
   <ng-container *ngFor="let order of orders">
-    <app-order-card
+    <!-- <app-order-card
       [order]="order"
       (decline)="onDecline($event)"
-    ></app-order-card>
+    ></app-order-card> -->
+    <lib-order-card [order]="order" (decline)="onDecline($event)"></lib-order-card>
   </ng-container>
 </div>
