Can upload profile image to user also

--- a/clients/owner-client/src/app/_components/image-with-delete/image-with-delete.component.html
+++ b/clients/owner-client/src/app/_components/image-with-delete/image-with-delete.component.html
@@ -16,7 +16,7 @@
     ></mat-spinner>
   </div>
   <img
-    src="{{image.url || 'http://localhost:5000/default/default.png'}}"
+    src="{{image.url || 'http://localhost:5000/images/default/default.png'}}"
     class="img"
     alt="picture"
     (load)="isLoading = false"
