--- a/clients/owner-client/src/app/_layouts/home/home.component.html
+++ b/clients/owner-client/src/app/_layouts/home/home.component.html
@@ -1,1 +1,14 @@
-<app-vertical-bar-week-day-orders></app-vertical-bar-week-day-orders>
+<mat-form-field appearance="outline">
+  <mat-label>Select your restaurant</mat-label>
+  <mat-select [(ngModel)]="selectedRestaurant">
+    <mat-option *ngFor="let restaurant of restaurants" [value]="restaurant.id">
+      {{ restaurant.name }}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
+
+<div class="charts-wrapper" *ngIf="selectedRestaurant">
+  <ng-container *ngFor="let chart of charts">
+    <app-chart-card [chart]="chart" (viewChart)="onNavigate($event)"></app-chart-card>
+  </ng-container>
+</div>
