Added line chart

--- a/clients/owner-client/src/app/_components/chart-card/chart-card.component.css
+++ b/clients/owner-client/src/app/_components/chart-card/chart-card.component.css
@@ -18,6 +18,7 @@
     background-color: rgb(131, 131, 131);
     height: 8rem;
     position: relative;
+    overflow: hidden;
 }
 
 .spinner-wrapper {
