--- a/clients/owner-client/src/app/_layouts/menus/menus.component.css
+++ b/clients/owner-client/src/app/_layouts/menus/menus.component.css
@@ -4,6 +4,12 @@
   gap: 1rem;
 }
 
+.filter-wrapper {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+}
+
 .paginator-wrapper {
   padding: 1rem 0;
 }
@@ -13,6 +19,10 @@
   align-items: center;
   justify-content: center;
   border-radius: 5px;
+  color: var(--primary);
+}
+
+.button-toggle {
   color: var(--primary);
 }
 
