--- a/clients/owner-client/src/app/_layouts/menus/menus.component.css
+++ b/clients/owner-client/src/app/_layouts/menus/menus.component.css
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   padding: 1rem;
+  gap: 2rem;
 }
 
 .paginator-wrapper {
@@ -29,5 +30,9 @@
 @media (max-width: 960px) {
   .menus-wrapper {
     justify-content: center;
+  }
+
+  .filter-wrapper {
+    flex-direction: column;
   }
 }
