Added paginator to tables

--- a/clients/owner-client/src/app/_layouts/tables/tables.component.css
+++ b/clients/owner-client/src/app/_layouts/tables/tables.component.css
@@ -4,6 +4,18 @@
     gap: 0.5rem;
 }
 
+.paginator-wrapper {
+    margin-top: 1rem;
+}
+
+.paginator {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--primary);
+    border-radius: 5px;
+}
+
 @media (max-width: 960px) {
     .tables-wrapper {
         justify-content: center;
