--- a/clients/owner-client/src/app/_layouts/tables/tables.component.html
+++ b/clients/owner-client/src/app/_layouts/tables/tables.component.html
@@ -1,3 +1,12 @@
+<mat-form-field appearance="outline">
+  <mat-label>Select Restaurant</mat-label>
+  <mat-select (valueChange)="onChangeRestaurant($event)">
+    <mat-option *ngFor="let restaurant of restaurants" [value]="restaurant.id">
+      {{ restaurant.name }}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
+
 <div class="tables-wrapper">
   <ng-container *ngFor="let table of tables">
     <app-table-card
@@ -8,13 +17,15 @@
 </div>
 
 <div class="paginator-wrapper">
-  <mat-paginator [length]="totalItems"
-              [pageSize]="tablesQueryParams.pageSize"
-              [pageIndex]="tablesQueryParams.pageIndex"
-              class="paginator"
-              [pageSizeOptions]="[10, 25, 50]"
-              [showFirstLastButtons]="true"
-              (page)="onPaginator($event)"
-              aria-label="Select page">
-</mat-paginator>
+  <mat-paginator
+    [length]="totalItems"
+    [pageSize]="tablesQueryParams.pageSize"
+    [pageIndex]="tablesQueryParams.pageIndex"
+    class="paginator"
+    [pageSizeOptions]="[10, 25, 50]"
+    [showFirstLastButtons]="true"
+    (page)="onPaginator($event)"
+    aria-label="Select page"
+  >
+  </mat-paginator>
 </div>
