--- a/clients/owner-client/src/app/_layouts/employees/employees.component.css
+++ b/clients/owner-client/src/app/_layouts/employees/employees.component.css
@@ -4,6 +4,18 @@
     gap: 1rem;
 }
 
+.paginator-wrapper {
+    margin-top: 1rem;
+}
+
+.paginator {
+    display: flex;
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+    color: var(--primary);
+}
+
 @media (max-width: 960px) {
     .card-wrapper {
         justify-content: center;
