--- a/clients/owner-client/src/app/_layouts/employees/employees.component.html
+++ b/clients/owner-client/src/app/_layouts/employees/employees.component.html
@@ -1,3 +1,12 @@
+<mat-form-field appearance="outline">
+  <mat-label>Select Restaurant</mat-label>
+  <mat-select (valueChange)="onChangeRestaurant($event)">
+    <mat-option *ngFor="let restaurant of restaurants" [value]="restaurant.id">
+      {{ restaurant.name }}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
+
 <div class="card-wrapper">
   <ng-container *ngFor="let employee of employeesCards">
     <app-employee-card [employee]="employee"></app-employee-card>
