--- a/clients/owner-client/src/app/_layouts/orders/orders-history/orders-history.component.html
+++ b/clients/owner-client/src/app/_layouts/orders/orders-history/orders-history.component.html
@@ -1,3 +1,12 @@
+<mat-form-field appearance="outline">
+  <mat-label>Select Restaurant</mat-label>
+  <mat-select [(ngModel)]="restaurant" (ngModelChange)="onChangeRestaurant()">
+    <mat-option *ngFor="let restaurant of restaurants" [value]="restaurant.id">
+      {{ restaurant.name }}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
+
 <div class="orders-wrapper">
   <ng-container *ngFor="let order of orders">
     <lib-order-card [order]="order"></lib-order-card>
