Can filter live orders

--- a/clients/owner-client/src/app/_layouts/orders/orders.component.css
+++ b/clients/owner-client/src/app/_layouts/orders/orders.component.css
@@ -1,3 +1,10 @@
+.filter-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
 .orders-wrapper {
     display: flex;
     flex-direction: column;
