Creted user card

--- a/clients/owner-client/src/app/_layouts/orders/orders.component.html
+++ b/clients/owner-client/src/app/_layouts/orders/orders.component.html
@@ -18,6 +18,7 @@
     <lib-order-card
       [order]="order"
       (decline)="onDecline($event)"
+      (block)="onBlockUser($event)"
       [hasBtns]="canManage"
     ></lib-order-card>
   </ng-container>
