--- a/clients/owner-client/src/app/_layouts/settings/blocked-users/blocked-users.component.html
+++ b/clients/owner-client/src/app/_layouts/settings/blocked-users/blocked-users.component.html
@@ -1,1 +1,5 @@
-<p>blocked-users works!</p>
+<div class="blocked-users-wrapper">
+    <ng-container *ngFor="let user of blockedUsers">
+        <app-user-card [user]="user"></app-user-card>
+    </ng-container>
+</div>
