Can decline orders

--- a/clients/owner-client/src/app/_layouts/orders/orders.component.html
+++ b/clients/owner-client/src/app/_layouts/orders/orders.component.html
@@ -19,6 +19,7 @@
       [order]="order"
       (decline)="onDecline($event)"
       (block)="onBlockUser($event)"
+      (accept)="onAccept($event)"
       [hasBtns]="canManage"
     ></lib-order-card>
   </ng-container>
