Added paginator to client

--- a/clients/owner-client/src/app/_layouts/settings/blocked-users/blocked-users.component.css
+++ b/clients/owner-client/src/app/_layouts/settings/blocked-users/blocked-users.component.css
@@ -3,3 +3,15 @@
     flex-wrap: wrap;
     gap: 0.5rem;
 }
+
+.paginator-wrapper {
+    margin-top: 1rem;
+}
+
+.paginator {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    color: var(--primary);
+}
