--- a/clients/owner-client/src/app/_layouts/settings/blocked-users/blocked-users.component.html
+++ b/clients/owner-client/src/app/_layouts/settings/blocked-users/blocked-users.component.html
@@ -1,5 +1,18 @@
 <div class="blocked-users-wrapper">
-    <ng-container *ngFor="let user of blockedUsers">
-        <app-user-card [user]="user"></app-user-card>
-    </ng-container>
+  <ng-container *ngFor="let customer of blockedCustomers">
+    <app-user-card [user]="customer"></app-user-card>
+  </ng-container>
+</div>
+
+<div class="paginator-wrapper">
+  <mat-paginator
+    class="paginator"
+    [length]="100"
+    [pageSize]="10"
+    [hidePageSize]="true"
+    [showFirstLastButtons]="true"
+    aria-label="Select page"
+    (page)="onPaginator($event)"
+  >
+  </mat-paginator>
 </div>
