Added paginator on backend for blocked customers

--- a/clients/owner-client/src/app/_layouts/settings/blocked-users/blocked-users.component.html
+++ b/clients/owner-client/src/app/_layouts/settings/blocked-users/blocked-users.component.html
@@ -7,7 +7,7 @@
 <div class="paginator-wrapper">
   <mat-paginator
     class="paginator"
-    [length]="100"
+    [length]="totalItems"
     [pageSize]="10"
     [hidePageSize]="true"
     [showFirstLastButtons]="true"
