Can unblock customer on frontend and on backend

--- a/clients/owner-client/src/app/_components/user-card/user-card.component.html
+++ b/clients/owner-client/src/app/_components/user-card/user-card.component.html
@@ -9,6 +9,6 @@
         </div>
     </div>
     <mat-card-actions>
-        <button type="button" mat-raised-button color="accent">Unblock</button>
+        <button type="button" mat-raised-button color="accent" (click)="onUnblock()">Unblock</button>
     </mat-card-actions>
 </mat-card>
