--- a/clients/owner-client/src/app/_layouts/settings/blocked-users/blocked-users.component.html
+++ b/clients/owner-client/src/app/_layouts/settings/blocked-users/blocked-users.component.html
@@ -9,7 +9,10 @@
 
 <div class="blocked-users-wrapper">
   <ng-container *ngFor="let customer of blockedCustomers">
-    <app-user-card [user]="customer"></app-user-card>
+    <app-user-card 
+      [user]="customer"
+      (unblock)="onUnblock($event)"
+    ></app-user-card>
   </ng-container>
 </div>
 
