--- a/clients/owner-client/src/app/_components/main-components/main-components.component.html
+++ b/clients/owner-client/src/app/_components/main-components/main-components.component.html
@@ -8,7 +8,8 @@
           <mat-icon>menu</mat-icon>
         </button>
       </app-top-nav>
-      <div class="content-wrapper">
+      <div class="content-wrapper"
+    >
         <router-outlet></router-outlet>
         <div class="chat-wrapper">
           <app-chat></app-chat>
