--- a/clients/owner-client/src/app/_layouts/settings/settings.component.html
+++ b/clients/owner-client/src/app/_layouts/settings/settings.component.html
@@ -1,1 +1,1 @@
-<a routerLink="/settings/blocked-users">blocked users</a>
+<button mat-raised-button type="button" routerLink="/settings/blocked-users">Blocked Users</button>
