Added loading spinner to main components

--- a/clients/owner-client/src/app/_components/main-components/main-components.component.html
+++ b/clients/owner-client/src/app/_components/main-components/main-components.component.html
@@ -14,6 +14,8 @@
         <div class="chat-wrapper">
           <app-chat></app-chat>
         </div>
+
+        <app-loading *ngIf="isLoading"></app-loading>
       </div>
   </mat-drawer-content>
 </mat-drawer-container>
