Can get data on frontend

--- a/clients/owner-client/src/app/_layouts/charts/orders-by-day/orders-by-day.component.html
+++ b/clients/owner-client/src/app/_layouts/charts/orders-by-day/orders-by-day.component.html
@@ -1,3 +1,5 @@
 <div class="main-wrapper">
-    <app-vertical-bar-chart></app-vertical-bar-chart>
+  <app-vertical-bar-chart
+    [chartData]="data"
+  ></app-vertical-bar-chart>
 </div>
