--- a/clients/owner-client/src/app/_layouts/charts/orders-by-day/orders-by-day.component.css
+++ b/clients/owner-client/src/app/_layouts/charts/orders-by-day/orders-by-day.component.css
@@ -4,3 +4,7 @@
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
+
+.filters-wrapper {
+  padding: 1rem;
+}
