Can get all data on frontend based on date

--- a/clients/owner-client/src/app/_layouts/home/home.component.html
+++ b/clients/owner-client/src/app/_layouts/home/home.component.html
@@ -8,7 +8,7 @@
 </mat-form-field>
 
 <div class="charts-wrapper" *ngIf="selectedRestaurant">
- <!--  <ng-container *ngFor="let chart of charts">
+  <ng-container *ngFor="let chart of charts">
     <app-chart-card [chart]="chart" (viewChart)="onNavigate($event)"></app-chart-card>
-  </ng-container> -->
+  </ng-container>
 </div>
