--- a/clients/owner-client/src/app/_layouts/charts/top-ten-menu-items/top-ten-menu-items.component.css
+++ b/clients/owner-client/src/app/_layouts/charts/top-ten-menu-items/top-ten-menu-items.component.css
@@ -4,8 +4,8 @@
     background-color: white;
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    justify-content: space-between;
     border-radius: 5px;
     border: 1px solid var(--primary);
+    padding: 1rem;
 }
